--- a/src/app/features/authors/components/author-list/author-list.component.html
+++ b/src/app/features/authors/components/author-list/author-list.component.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title class="text-xl font-semibold">Authors</ion-title>
+		<ion-title class="text-xl font-semibold">Autores</ion-title>
 		<ion-buttons slot="end">
 			<ion-button routerLink="/authors/new" class="text-primary">
 				<ion-icon name="add" class="text-2xl"></ion-icon>
@@ -15,7 +15,7 @@
 			class="hover:bg-gray-50 cursor-pointer">
 			<ion-label>
 				<h2 class="text-lg font-medium text-gray-900">{{ author.name }}</h2>
-				<p class="text-sm text-gray-500">{{ author.books.length }} books</p>
+				<p class="text-sm text-gray-500">{{ author.books.length }} libros</p>
 			</ion-label>
 		</ion-item>
 	</ion-list>
