--- a/src/app/features/books/components/book-list/book-list.component.html
+++ b/src/app/features/books/components/book-list/book-list.component.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title class="text-xl font-semibold">Books</ion-title>
+		<ion-title class="text-xl font-semibold">Libros</ion-title>
 		<ion-buttons slot="end">
 			<ion-button routerLink="/books/new" class="text-primary">
 				<ion-icon name="add" class="text-2xl"></ion-icon>
