--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -10,10 +10,10 @@
 			<ion-col size="12" sizeMd="4">
 				<ion-card [routerLink]="['/books']" class="ion-activatable">
 					<ion-card-header>
-						<ion-card-title>Books</ion-card-title>
+						<ion-card-title>Libros</ion-card-title>
 					</ion-card-header>
 					<ion-card-content>
-						Manage your book collection
+						Administra tus libros
 					</ion-card-content>
 					<ion-ripple-effect></ion-ripple-effect>
 				</ion-card>
@@ -22,10 +22,10 @@
 			<ion-col size="12" sizeMd="4">
 				<ion-card [routerLink]="['/authors']" class="ion-activatable">
 					<ion-card-header>
-						<ion-card-title>Authors</ion-card-title>
+						<ion-card-title>Autores</ion-card-title>
 					</ion-card-header>
 					<ion-card-content>
-						Manage authors information
+						Administra tus autores
 					</ion-card-content>
 					<ion-ripple-effect></ion-ripple-effect>
 				</ion-card>
@@ -34,10 +34,10 @@
 			<ion-col size="12" sizeMd="4">
 				<ion-card [routerLink]="['/categories']" class="ion-activatable">
 					<ion-card-header>
-						<ion-card-title>Categories</ion-card-title>
+						<ion-card-title>Categorías</ion-card-title>
 					</ion-card-header>
 					<ion-card-content>
-						Organize your books by categories
+						Organiza tus libros por categorías
 					</ion-card-content>
 					<ion-ripple-effect></ion-ripple-effect>
 				</ion-card>
