--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,26 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <app-nav-menu></app-nav-menu>
+  <ion-content>
     <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+  </ion-content>
+  <ion-tab-bar slot="bottom" class="ion-tab-bar">
+    <ion-tab-button tab="dashboard" routerLink="/dashboard" routerDirection="root" routerLinkActive="selected">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Dashboard</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="books" routerLink="/books" routerDirection="root" routerLinkActive="selected">
+      <ion-icon name="book"></ion-icon>
+      <ion-label>Libros</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="authors" routerLink="/authors" routerDirection="root" routerLinkActive="selected">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Autores</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="categories" routerLink="/categories" routerDirection="root" routerLinkActive="selected">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>Categorías</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
 </ion-app>
