--- a/src/app/core/components/nav-menu/nav-menu.component.html
+++ b/src/app/core/components/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <ion-menu contentId="main-content">
 	<ion-header>
 		<ion-toolbar>
-			<ion-title>Menu</ion-title>
+			<ion-title>Menú</ion-title>
 		</ion-toolbar>
 	</ion-header>
 
@@ -9,17 +9,17 @@
 		<ion-list>
 			<ion-item routerLink="/books" routerDirection="root" routerLinkActive="selected">
 				<ion-icon name="book" slot="start"></ion-icon>
-				<ion-label>Books</ion-label>
+				<ion-label>Libros</ion-label>
 			</ion-item>
 
 			<ion-item routerLink="/authors" routerDirection="root" routerLinkActive="selected">
 				<ion-icon name="people" slot="start"></ion-icon>
-				<ion-label>Authors</ion-label>
+				<ion-label>Autores</ion-label>
 			</ion-item>
 
 			<ion-item routerLink="/categories" routerDirection="root" routerLinkActive="selected">
 				<ion-icon name="list" slot="start"></ion-icon>
-				<ion-label>Categories</ion-label>
+				<ion-label>Categorías</ion-label>
 			</ion-item>
 		</ion-list>
 	</ion-content>
