--- a/src/app/features/categories/components/category-list/category-list.component.html
+++ b/src/app/features/categories/components/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title class="text-xl font-semibold">Categories</ion-title>
+		<ion-title class="text-xl font-semibold">Categorías</ion-title>
 		<ion-buttons slot="end">
 			<ion-button routerLink="/categories/new" class="text-primary">
 				<ion-icon name="add" class="text-2xl"></ion-icon>
